# frontend/openapi.json
@@ -1,27 +1,18 @@
 {
   "openapi": "3.0.2",
-  "info": {
-    "title": "TicTacToeApp",
-    "description": "\nTicTacToe API helps you launch an exciting tic-tac-toe game. 👾\n\n## Board\n\nYou will be able to:\n\n* **Retrieve a board**\n* **Add moves to the board**\n",
-    "contact": {
-      "name": "Yuyi",
-      "email": "yli@8thlight.com"
-    },
-    "version": "0.0.1"
-  },
+  "info": { "title": "FastAPI", "version": "0.1.0" },
   "paths": {
     "/board": {
       "get": {
+        "tags": ["getBoard"],
         "summary": "Board",
-        "operationId": "board_board_get",
+        "operationId": "getBoard",
         "responses": {
           "200": {
             "description": "Successful Response",
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/BoardResponse"
-                }
+                "schema": { "$ref": "#/components/schemas/BoardResponse" }
               }
             }
           }
@@ -30,14 +21,13 @@
     },
     "/move": {
       "post": {
+        "tags": ["makeMove"],
         "summary": "Create Move",
-        "operationId": "create_move_move_post",
+        "operationId": "makeMove",
         "requestBody": {
           "content": {
             "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/MoveRequest"
-              }
+              "schema": { "$ref": "#/components/schemas/MoveRequest" }
             }
           },
           "required": true
@@ -47,9 +37,7 @@
             "description": "Successful Response",
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/BoardResponse"
-                }
+                "schema": { "$ref": "#/components/schemas/BoardResponse" }
               }
             }
           },
@@ -77,9 +65,7 @@
             "description": "Validation Error",
             "content": {
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
+                "schema": { "$ref": "#/components/schemas/HTTPValidationError" }
               }
             }
           }
@@ -97,9 +83,7 @@
           "slots": {
             "title": "Slots",
             "type": "array",
-            "items": {
-              "type": "string"
-            }
+            "items": { "type": "string" }
           }
         }
       },
@@ -110,9 +94,7 @@
           "detail": {
             "title": "Detail",
             "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/ValidationError"
-            }
+            "items": { "$ref": "#/components/schemas/ValidationError" }
           }
         }
       },
@@ -124,9 +106,7 @@
           "detail": {
             "title": "Detail",
             "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/ValidationErrorResponse"
-            }
+            "items": { "$ref": "#/components/schemas/ValidationErrorResponse" }
           }
         }
       },
@@ -135,10 +115,7 @@
         "required": ["slot_index"],
         "type": "object",
         "properties": {
-          "slot_index": {
-            "title": "Slot Index",
-            "type": "integer"
-          }
+          "slot_index": { "title": "Slot Index", "type": "integer" }
         }
       },
       "SpotUnavailableErrorResponse": {
@@ -149,9 +126,7 @@
           "detail": {
             "title": "Detail",
             "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/ValidationErrorResponse"
-            }
+            "items": { "$ref": "#/components/schemas/ValidationErrorResponse" }
           }
         }
       },
@@ -163,18 +138,10 @@
           "loc": {
             "title": "Location",
             "type": "array",
-            "items": {
-              "type": "string"
-            }
+            "items": { "type": "string" }
           },
-          "msg": {
-            "title": "Message",
-            "type": "string"
-          },
-          "type": {
-            "title": "Error Type",
-            "type": "string"
-          }
+          "msg": { "title": "Message", "type": "string" },
+          "type": { "title": "Error Type", "type": "string" }
         }
       },
       "ValidationErrorResponse": {
@@ -185,18 +152,10 @@
           "loc": {
             "title": "Loc",
             "type": "array",
-            "items": {
-              "type": "string"
-            }
+            "items": { "type": "string" }
           },
-          "msg": {
-            "title": "Msg",
-            "type": "string"
-          },
-          "type": {
-            "title": "Type",
-            "type": "string"
-          }
+          "msg": { "title": "Msg", "type": "string" },
+          "type": { "title": "Type", "type": "string" }
         }
       }
     }
